--- a/resignator/pom.xml
+++ b/resignator/pom.xml
@@ -35,11 +35,6 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
@@ -60,4 +55,11 @@
         </plugins>
     </build>
 
+	<repositories>
+    	<repository>
+      		<id>oss-snapshots-repo</id>
+      		<name>oss-snapshots-repo</name>
+      		<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    	</repository>
+    </repositories>
 </project>
