[#1] Implemented security Requires password Key fields are encrypted

--- a/resignator/pom.xml
+++ b/resignator/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpg-jdk15on</artifactId>
+            <version>1.52</version>
+        </dependency>
     </dependencies>
 
     <build>
