--- a/resignator/pom.xml
+++ b/resignator/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bekwam</groupId>
     <artifactId>resignator</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
